--- a/httpd-replicaset.yaml
+++ b/httpd-replicaset.yaml
@@ -1,23 +1,21 @@
 apiVersion: apps/v1
 kind: ReplicaSet
-metadata: 
-  name: httpd-replicaset
+metadata:
+  name: nginx-replicaset
+  labels:
+    app: nginx_app
+    type: front-end
 spec:
+  # modify replicas according to your case
   replicas: 4
   selector:
     matchLabels:
-      app: httpd_app
+      type: front-end
   template:
     metadata:
       labels:
-        app: httpd_app
         type: front-end
     spec:
       containers:
-      - name: httpd-container
-        image: httpd:latest
-        resources:
-          limits:
-            cpu: 200m
-            memory: "105Mi"
-~                               
+      - name: nginx-container
+        image: nginx:latest
