--- a/Healthcheck/deployment-live-ready.yaml
+++ b/Healthcheck/deployment-live-ready.yaml
@@ -33,3 +33,10 @@ spec:
               port: 80
             initialDelaySeconds: 15
             periodSeconds: 60
+          resources:
+            requests:
+              cpu: "100m"
+              memory: "100Mi"
+            limits:
+              cpu: "100m"
+              memory: "100Mi"
